<resources>
    <string name="app_name">PORK PIT</string>
    <string name="welcome">WELCOME</string>
    <string name="logintxt">LOGIN</string>
    <string name="signuptxt">SIGNUP</string>

    <string name="personaldetails">PERSONAL DETAILS</string>
    <string name="policy">I Agree To The Terms And Policies</string>
    <string name="passworddetails">SECURITY DETAILS</string>
    <string name="locationdetails">LOCATION DETAILS</string>
    <string name="loginlabel1">LOGIN WITH EMAIL.</string>
    <string name="signuplabel1">SIGNUP WITH EMAIL. </string>
    <string name="signuplabel2">YOU WILL HAVE TO VERIFY THE  EMAIL BEFORE CONTINUING</string>
    <string name="loginlabel2">LOGIN</string>

    <string name="nav_opener">open_nav</string>
    <string name="remove">REMOVE</string>
    <string name="nav_closer">close_nav</string>
    <string name="soup">SOUP</string>
    <string name="offers">Weekly Offers</string>
    <string name="offer">OFFERS</string>
    <string name="logout">LOGOUT</string>
    <string name="setpic">SET PROFILE PICTURE?</string>
    <string name="total">TOTAL</string>
    <string name="checkout">CHECKOUT</string>
    <string name="name">NAME</string>
    <string name="happensonce">THIS ONLY HAPPENS ONCE</string>
    <string name="letuswork">LET US WORK</string>
    <string name="Creatingdb">CREATING YOUR DATABASE...</string>
    <string name="similar">OTHER PRODUCTS</string>
    <string name="update">CHECK UPDATE</string>
    <string name="cart">CART</string>
    <string name="feed">SOCIAL FEED</string>
    <string name="gotopayment">GO TO PAYMENT</string>
    <string name="settings">SETTINGS</string>
    <string name="version">Version 1.0.0.0.0.0.A.1</string>
    <string name="account">Account Settings</string>
    <string name="pay">PAY</string>
    <string name="exit">EXIT</string>
    <string name="lock">LOCK APP?</string>
    <string name="aboutus">provides access to the PorkPit Ruaka Products ie Meals, Drinks etc.
    Check out more of our products in the product feed.
    </string>
    <string name="license">EULA End User License Agreement legally binding and protect This intellectual property of Techkey
        and prohibit  re-selling This software</string>
    <string name="howone">This app provides direct access to the PorkPit Ruaka Products ie Meals, Drinks etc.</string>
    <string name="howtwo">Create an account with us that we use to identify you so as to give our value to you and only to you.
    Your information is kept private from third parties and due to our customer passion this App is Add free and will remain to be
    Add free in future developments</string>
    <string name="howthree">Any errors reported to us will be greatly Appreciated.If you like the app feel free to suggest it to your friends
    .Lets Grow together</string>
    <string name="poweredby">POWERED BY TUWASHOW MEDIA</string>
    <string name="shipp">shippingfee</string>
    <string name="support">SUPPORT</string>
    <string name="call">Call to Order</string>
    <string name="www.tuwa">WWW.TUWASHOWMEDIA.CO.KE</string>
    <string name="www.tech">WWW.TECHKEY.CO.KE</string>
    <string name="next">NEXT</string>
    <string name="entervoucher">VOUCHER</string>
    <string name="copyvoucher">ENTER A PIT VOUCHER</string>

    <string name="voucher">VOUCHER</string>
    <string name="summary">SUMMARY</string>
    <string name="payment">PAYMENT</string>
    <string name="checkoutq">CHECKOUT</string>
    <string name="darkmode">DARK MODE?</string>
    <string name="about">ABOUT</string>
    <string name="paymentoption">SELECT PAYMENT OPTIONS</string>
    <string name="till">TILL NUMBER</string>
    <string name="tillno">710664418</string>
    <string name="nothing">NULL</string>
    <string name="mpesa">M-PESA</string>
    <string name="mpesaadd">PAY FOR YOUR PACKAGE THROUGH BEST MONEY TRANSACTION METHOD IN KENYA</string>
    <string name="change">CHANGE</string>
    <string name="mpesaaddtwo">BEFORE PROCEEDING MAKE SURE YOU HAVE ENOUGH  MONEY</string>
    <string name="shippingdetails">CART DETAILS</string>
    <string name="salad">SALAD</string>
    <string name="empydescription">Description: null</string>
    <string name="ugali">UGALI</string>
    <string name="addressdetail">ADDRESS DETAILS</string>
    <string name="fed">FEED</string>
    <string name="viewproduct">VIEW</string>
    <string name="payondelivery">PAY ON DELIVERY</string>
    <string name="socialfeed">SOCIAL F E E D</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="accompaniments">ACCOMPANIMENTS</string>
    <string name="changephone">change phone</string>
    <string name="productdetails">PRODUCT DETAILS</string>
    <string name="changeemail">change email</string>
    <string name="swipe">- - -SWIPE TO NAVIGATE- - -</string>
    <string name="changename">CHANGE NAME</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remembermettxt">Remember Me?</string>
    <string name="forgotxt">Forgot Password?!</string>
    <string name="resendverification">HAVE ACCOUNT ?  RESEND VERIFICATION</string>
    <string name="verifycode">ENTER VERIFICATION CODE SENT TO YOUR PHONE AS AN SMS</string>
    <string name="resendcode">RESEND CODE?</string>
    <string name="verify">VERIFY > </string>
    <string name="accounts">ACCOUNTS</string>
    <string name="mail">EMAIL</string>
    <string name="co">CO</string>
    <string name="lo">LOG</string>
    <string name="category">CATEGORY</string>
    <string name="in">I N</string>
    <string name="i">I</string>
    <string name="quantity">Quantity:</string>
    <string name="chicken">CHICKEN</string>
    <string name="platter">PLATTER</string>
    <string name="porkfry">Pork Fry</string>
    <string name="home">HOME</string>
    <string name="choma">Choma</string>
    <string name="half">HALF</string>
    <string name="resetcart">RESET AND EMPTY CART?</string>
    <string name="full">FULL</string>
    <string name="gram1">200g</string>
    <string name="gram2">500g</string>
    <string name="gram3">350g</string>
    <string name="gram4">500g</string>
    <string name="DE">DE</string>
    <string name="code">CODE</string>
    <string name="contact">Contact us if you have a problem </string>
    <string name="how">HOW WE WORK?</string>
    <string name="loginadvertisement">GET YOUR DAILY MEAL SERVED TO YOU COMFORTABLY AT YOUR HOME.</string>
    <string name="exitapp">CLOSE APP AND OPEN EMAIL</string>
    <string name="phone">PHONE</string>
    <string name="firstconfirm">YOU NEED TO FIRST CONFIRM YOUR EMAIL ADDRESS BEFORE CONTINUING</string>
    <string name="openmail">OPEN YOUR EMAIL ACCOUNT AND CLICK ON LINK PROVIDED BY :THE TECHKEY TEAM</string>
    <string name="resendlink">RESEND EMAIL VERIFICATION LINK?</string>
    <string name="afterverifing">ONCE YOU VERIFY , CLOSE THIS APP AND LOGIN AGAIN</string>
    <string name="Password">PASSWORD</string>
    <string name="fullname">Full Name</string>
    <string name="location">Location</string>
    <string name="estate">Estate</string>
    <string name="copyright">Powered By TuwashowMedia</string>
    <string name="title_activity_home">HOME</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>