<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category_24"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart_24"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/feed_24"
            android:title="@string/feed" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_24"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info_24"
            android:title="@string/about" />
    </group>
</menu>