<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:background="@drawable/cropmain"
    android:layout_height="match_parent"
    tools:context=".start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/imageView"
       android:layout_marginTop="150dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="250dp"
           android:scaleType="centerCrop"
            android:layout_margin="7dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/porkpitlogo" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fontone"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <Button
        android:id="@+id/loginbutton"

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView15"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/inputtwo"
        android:fontFamily="@font/arialbd"
        android:text="@string/logintxt" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/inputtwo"
        android:fontFamily="@font/arialbd"
        android:text="@string/signuptxt" />

    <TextView
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView21"
        android:textSize="10dp"
        android:layout_width="wrap_content"
        android:fontFamily="@font/arial"
        android:layout_height="wrap_content"
        android:text="@string/copyright" />

    <TextView
        android:layout_below="@id/signupbutton"
        android:layout_centerHorizontal="true"
        android:textSize="10dp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/arial"
        android:id="@+id/howtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/arial"
        android:padding="3dp"
        android:textSize="9dp"

        android:text="@string/loginadvertisement"
        android:textAlignment="center"
        android:textColor="@color/white" />
</RelativeLayout>