<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:background="@drawable/cropmain"
    android:layout_height="match_parent"
    tools:context=".phoneverification">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:fontFamily="@font/arial"
        android:textAlignment="center"

        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/verifycode" />


    <com.chaos.view.PinView

        android:id="@+id/phonecode"
        style="@style/PinWidget.PinView"
        android:layout_width="340dp"
        android:layout_height="60dp"

        android:hint="code."

        android:inputType="number"
        android:layout_below="@id/textView5"
        android:layout_centerHorizontal="true"
        android:itemBackground="@color/white"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemRadius="4dp"
        app:lineWidth="2dp"
         />



    <TextView
        android:id="@+id/textView88"
        android:layout_below="@id/phonecode"
        android:fontFamily="@font/arial"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/resendcode" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
       android:layout_alignParentBottom="true"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">
        <Button
            android:background="@android:color/transparent"
            android:id="@+id/verifycodebtn"
            android:textColor="@color/white"
            android:fontFamily="@font/arialbd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/fontone"
        android:text="@string/co"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="2dp"
        android:textColor="@color/black"
        android:textSize="60dp" />

    <TextView
        android:layout_below="@+id/textView16"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/fontone"
        android:textSize="60dp"
        android:layout_margin="2dp"
        android:textColor="@color/black"
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DE" />

</RelativeLayout>