<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/cropmain"
    android:layout_width="match_parent"
    android:padding="13px"
    android:layout_height="match_parent"
    tools:context=".loginpage">

    <TableLayout
        android:id="@+id/tablelogin"
        android:layout_below="@id/textView3"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >




        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_below="@id/tablelogin"
        android:id="@+id/framelogin"
        android:layout_width="match_parent"
android:gravity="center"
        android:padding="5dp"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText

            android:id="@+id/loginemailtxt"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:textColorHint="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/white"
            android:background="@drawable/inputtwo"
            android:ems="10"
            android:fontFamily="@font/arial"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/loginpasswordtxt"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/inputtwo"
            android:ems="10"
            android:fontFamily="@font/arial"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textAlignment="center" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/textView4"
                    android:textAlignment="textEnd"
                    android:fontFamily="@font/arial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remembermettxt" />

                <CheckBox
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:id="@+id/checkBox"
                    android:layout_margin="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp" />


            </TableRow>

        </TableLayout>



        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <Button
                android:id="@+id/emailloginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/arialbd"
                android:text="@string/logintxt"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/forgotpasswordtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_margin="5dp"
            android:fontFamily="@font/arial"
            android:textAlignment="center"
            android:text="@string/forgotxt"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/resendmailverification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:textSize="13dp"
            android:visibility="gone"
            android:text="@string/resendverification"
            android:textAlignment="center"
            android:textColor="#54AA07" />



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="8dp"
        android:layout_alignParentTop="true"
        android:id="@+id/imageView2"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:scaleType="centerCrop"
            android:layout_height="120dp"
            app:srcCompat="@drawable/porkpitlogo" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fontone"
        android:text="@string/lo"

        android:textColor="@color/white"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView18"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:textSize="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:fontFamily="@font/arialbd"
        android:text="@string/loginlabel1" />

    <TableLayout
        android:layout_below="@id/textView2"
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >



            <TextView
                android:gravity="center"
                android:layout_margin="3dp"
               android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontone"
                android:text="@string/in"
                android:textColor="@color/white"
                android:textSize="40dp" />
        </TableRow>



    </TableLayout>

</RelativeLayout>