<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="215dp"

    android:gravity="bottom"

    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">




    <androidx.cardview.widget.CardView
        android:id="@+id/view2"
        android:layout_marginTop="15dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="12dp"
        android:background="#ffffff"
        android:shape="ring"

        app:cardCornerRadius="95dp">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/profileimage"
            android:layout_width="150dp"
            android:layout_height="150dp"

            android:scaleType="centerCrop"
            android:contentDescription="@string/nav_header_desc"

            app:srcCompat="@drawable/porkpitlogo" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profilename"
        android:fontFamily="@font/arial"
        android:textColor="@color/white"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/profilemail"
        android:layout_width="wrap_content"
        android:fontFamily="@font/arial"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>